sec.club/src/views/Article/Article.scss
@import "../../variables.scss";

article {
	font-size: 1.15em;
	line-height: 1.8;
	padding-bottom: 8px;

	a:any-link {
		text-decoration: none;
		color: lighten($primary-color, 5%);

		&:hover {
			text-decoration: underline;
		}
	}

	img {
		max-width: 100%;
	}

	h1 {
		font-size: 2.5em;
	}

	h2 {
		font-size: 1.8em;
	}

	h3 {
		font-size: 1.5em;
	}

	h4 {
		font-size: 1.35em;
	}

	h5 {
		font-size: 1.25em;
	}

	h5 {
		font-size: 1.2em;
	}

	code {
		background: $code-background-color;
		padding: 0.1em 0.3em;
		border-radius: 0.3em;
	}

	pre > code {
		background: inherit;
		padding: none;
		border-radius: none;
	}
}

